--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack --mode development ./frontend/src/index.js --output ./frontend/static/dist/dist.js",
+    "dev": "webpack --mode development --watch ./frontend/src/index.js --output ./frontend/static/dist/dist.js",
     "build": "webpack --mode production ./frontend/src/index.js --output ./frontend/static/dist/dist.js"
   },
   "repository": {
@@ -27,8 +27,14 @@
     "webpack-cli": "^3.3.0"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "bootstrap": "^4.3.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.5",
-    "react-dom": "^16.8.5"
+    "react-dom": "^16.8.5",
+    "react-redux": "^6.0.1",
+    "reactstrap": "^7.1.0",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   }
 }
